--- a/src/Components/JobsPageComponents/JobCards/JobCards.css
+++ b/src/Components/JobsPageComponents/JobCards/JobCards.css
@@ -6,7 +6,6 @@
 .jobcard {
   display: flex;
   flex-direction: column;
-
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 1rem;
   padding: 2rem;
@@ -17,13 +16,12 @@
     0 20px 50px 0 rgba(0, 0, 0, 0.19);
 }
 .jobcard-postedTime {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.19);
-  color: #313131;
+  color: #3b3838;
   width: fit-content;
   border-radius: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 5px 10px;
   font-size: 14px;
+  background: rgb(230, 227, 227);
 }
 .jobcard-companyDetails {
   display: flex;
@@ -41,7 +39,6 @@
   color: #8b8b8b;
 }
 .jobcard-companyDetails > .jobcard-companyDetails-text > .jobcard-JobName {
-  /* font-size: 14px; */
   line-height: 6px;
 }
 .jobcard-companyDetails > .jobcard-companyDetails-text > .jobcard-JobLocation {
@@ -63,12 +60,13 @@
   position: absolute;
   width: 100%;
   text-align: center;
-  background-color: white;
-  bottom: 0;
+  background-color: rgb(255, 255, 255);
+ 
+  bottom: -10px;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  opacity: 80%;
-  color: #4943da;
+  opacity: 90%;
+  color: #3a93ff;
   cursor: pointer;
 }
 
@@ -82,10 +80,29 @@ button {
 .jobcard-button {
   background-color: rgb(85, 239, 196);
   padding: 1rem;
-  border-radius: 8px;
-  font-size: 1rem;
-  font-weight: 500;
+  border-radius: 15px;
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
   cursor: pointer;
+  position: relative; 
+  overflow: hidden; 
+  transition: background-color 0.3s ease; 
+}
+
+.jobcard-button::before {
+  content: ''; 
+  position: absolute;
+  top: 0;
+  left: -100%; 
+  width: 100%; 
+  height: 100%;
+  background: linear-gradient(to right, rgba(5, 147, 133, 0.5), rgba(0, 0, 0, 0)); /* Gradient from left to right */
+  transition: left 0.3s ease; 
+}
+
+.jobcard-button:hover::before {
+  left: 0; /* Move gradient to the right to reveal the background color */
 }
 
 @media screen and (max-width: 2000px) {
